Pressure tab: Chamber scene: Masses should stack and increase net mass
Pressure tab: Chamber scene: Fixed: Water should equalize after mass removed
Pressure tab: Chamber scene: Weights push down the water
Pressure tab: Chamber scene: Snap to drop site
Pressure tab: Chamber scene: Show a dotted line where masses can be dropped
Pressure tab: Fixed: Number format should change when submerged, not when y<0
Pressure tab: Initial scene: Fixed: dragging bounds for pressure sensors not respected
Pressure tab: Trapezoid scene: Fixed: Pressure doesn't update as water is added
Pressure tab: Chamber scene: Added draggable masses
Pressure tab: hide potted plant for scenes 2-3
Pressure tab: Chamber scene: Added container shape
Pressure tab: Account for gravity in pressure computation
Pressure tab: Trapezoid scene: Added pressure model which accounts for partially filled pool
Pressure tab: Trapezoid scene: Fixed: Water comes out of faucet even when pool is full
Pressure tab: Trapezoid scene: Update faucet fluid color based on the density of the fluid
Pressure tab: Trapezoid scene: Made scene radio buttons non-square
Pressure tab: Trapezoid scene: Fill pool when water flows
Pressure tab: Added water flowing from the faucet as a solid rectangle
Pressure tab: Removed background from radio button strip
Flow tab & Water tower tab: Added slow/full speed buttons and pause (like ESPB)
Pressure tab: Trapezoid scene: Added a faucet (not wired up)
Pressure tab: Added image icons for scene radio button strip
Pressure tab: Added trapezoidal shape for pool
Pressure tab: Added a toolbox for pressure sensors
Pressure tab: Increased number of pressure sensors
# 0.00.47 (60952) Feb 2, 2012
Improved layout for control panels
Fixed: Pressure gauges change number of digits when atmosphere turns on/off
Updated model to handle atmosphere on/off
Made sky black when atmosphere is off
Added an Atmosphere control to the control panel
Added a grid node